output.txt
tijn.java:32: error: ')' expected
                } catch (NumberFormatException e, RuntimeException r) {
                                                ^
tijn.java:32: error: ';' expected
                } catch (NumberFormatException e, RuntimeException r) {
                                                                    ^
tijn.java:40: error: illegal start of expression
    static void account_menu() throws SQLException
    ^
tijn.java:40: error: illegal start of expression
    static void account_menu() throws SQLException
           ^
tijn.java:40: error: ';' expected
    static void account_menu() throws SQLException
                            ^
tijn.java:40: error: not a statement
    static void account_menu() throws SQLException
                                      ^
tijn.java:40: error: ';' expected
    static void account_menu() throws SQLException
                                                  ^
tijn.java:149: error: ')' expected
            } catch (NumberFormatException e, SQLException s,
                                            ^
tijn.java:150: error: ';' expected
                RuntimeException r) {
                                ^
tijn.java:150: error: not a statement
                RuntimeException r) {
                                 ^
tijn.java:150: error: ';' expected
                RuntimeException r) {
                                  ^
tijn.java:157: error: illegal start of expression
    static void main_menu() throws SQLException
    ^
tijn.java:157: error: illegal start of expression
    static void main_menu() throws SQLException
           ^
tijn.java:157: error: ';' expected
    static void main_menu() throws SQLException
                         ^
tijn.java:157: error: not a statement
    static void main_menu() throws SQLException
                                   ^
tijn.java:157: error: ';' expected
    static void main_menu() throws SQLException
                                               ^
tijn.java:197: error: illegal start of expression
    public static void main(String arg[])
    ^
tijn.java:197: error: illegal start of expression
    public static void main(String arg[])
           ^
tijn.java:197: error: ';' expected
    public static void main(String arg[])
                 ^
tijn.java:197: error: ')' expected
    public static void main(String arg[])
                                  ^
tijn.java:197: error: illegal start of expression
    public static void main(String arg[])
                                      ^
tijn.java:197: error: ';' expected
    public static void main(String arg[])
                                       ^
tijn.java:197: error: illegal start of expression
    public static void main(String arg[])
                                        ^
tijn.java:197: error: ';' expected
    public static void main(String arg[])
                                         ^
tijn.java:212: error: reached end of file while parsing
}
 ^
25 errors
